# thicknessExpe

./: .gitignore  README.md
Clean/emd/: CMakeLists.txt  emd.cpp
Clean/histogram/: CMakeLists.txt  histogram.cpp
Clean/noise/: CMakeLists.txt  Readme  createNoise.cpp
Clean/off2pts/: CMakeLists.txt  off2pts.cpp
Clean/ptsSpheresViewer/: CMakeLists.txt  ptsSpheresViewer.cpp
Clean/sdf/: CMakeLists.txt  sdf.cpp
Clean/thickness/: CMakeLists.txt  Readme  longvol2sphere.cpp  thicknessFromSpheres.cpp
GlobalError/: Readme  globalError  globalError.cpp
Ordonnancement/: CMakeLists.txt
Ordonnancement/bruitage/: CMakeLists.txt  createNoise.cpp
Ordonnancement/crust/: ndefs.h  setNormals.C
Ordonnancement/distribution/: CMakeLists.txt  Readme  distribution.cpp
Ordonnancement/emd/: CMakeLists.txt  Readme  emd.cpp
Ordonnancement/globalError/: CMakeLists.txt  Readme  globalError.cpp
Ordonnancement/localError/: CMakeLists.txt  Readme  localError.cpp
Ordonnancement/scripts/: obj2pts3d.sh  off2RDMAspheres.sh  pts2spheres.sh
Ordonnancement/sdf/: CMakeLists.txt  Readme  sdf.cpp
Ordonnancement/thickness/: CMakeLists.txt  Readme  longvol2sphere  off2spheres.sh  off2vol.sh  thickness.cpp  thicknessFromSpheres.cpp
compareNoises/: CMakeLists.txt  CMakeLists.txt~  Lisez-moi  Lisez-moi~  README~  compareNoises.cpp  compareNoises.cpp~
compareThickness/: CMakeLists.txt  CMakeLists.txt~  Lisez-Moi  Lisez-Moi~  compare_resol.cpp  compare_resol.cpp~  profil_vol.sh~  profils.cpp  profils.cpp~  script.p~
compareThickness/volFillExterior/: CMakeLists.txt  volFillExterior.cpp
emd/: Readme
emd/withFiles/: emd.cpp
emd/withoutFiles/: CMakeLists.txt  emdVol.cpp  magnitudes_example.txt  spheresTools.h
emd/withoutFiles/longvol2sphere/: longvol2sphere.cc
localErrorSDF/: CMakeLists.txt  Lisez-moi  localErrorSDF.cpp
localErrorVol/: CMakeLists.txt  Lisez-moi  localErrorVol.cpp  magnitudes.txt  off2vol.sh  spheresTools.h
localErrorVol/longvol2sphere/: CMakeLists.txt
repartition/: README  repartition.cpp
results/: Remarques.txt
results/Armadillo/repartition/: calculsMoindresCarresVol.txt  emdSdfDisc.txt  moyenne.txt  variance.txt
results/knot/: values.txt
